--- a/docs/.vitepress/theme/tailwind.css
+++ b/docs/.vitepress/theme/tailwind.css
@@ -3,3 +3,16 @@
 @tailwind components;
 
 @tailwind utilities;
+
+.VPSidebar {
+  .items {
+    @apply border-l border-[#e2e2e3] grid gap-y-3;
+
+    .is-active {
+      @apply border-l-2 border-indigo-600;
+    }
+    .item {
+      @apply h-6 pl-4;
+    }
+  }
+}
